--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,14 +12,14 @@
         <activity android:name=".login.activity.LoginCut2Activity"></activity>
         <activity android:name=".login.activity.LoginCutActivity" />
         <activity android:name=".ui.MainActivity" />
-        <activity android:name=".login.activity.LoginNormActivity" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".login.activity.LoginNormActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".MainActivity"/>
     </application>
 
     <!-- 权限配置 -->
